# chess

chess/: .gitignore  CMakeLists.txt  main.cpp
chess/ai/random/: random_ai.cpp  random_ai.hpp
chess/ai/template/: ai_template.hpp
chess/datastructures/: bit_matrix.cpp  bit_matrix.hpp  board.cpp  board.hpp  consts.hpp  enums.hpp  piece.hpp
chess/engine/: engine.cpp  engine.hpp  game_history.hpp  move.hpp  move_generation.cpp  move_generation.hpp  state_info.hpp
chess/gui/: MainApp.cpp  MainApp.hpp  MainFrame.cpp  MainFrame.hpp  wxImagePanel.cpp  wxImagePanel.hpp
chess/qtgui/: ChessBoardWidget.cpp  ChessBoardWidget.hpp  ChessSquare.cpp  ChessSquare.hpp  MainApp.cpp  MainWindow.cpp  MainWindow.h
